fix clickability on mobile

--- a/DBU/burger-menu.css
+++ b/DBU/burger-menu.css
@@ -34,7 +34,7 @@
 }
 
 input + label {
-  position: fixed;
+  position: absolute;
   top: 20px;
   right: 20px;
   height: 20px;
@@ -51,7 +51,7 @@ input + label {
     left: 0;
     display: block;
     background: white;
-    transition: 0.5s;
+    transition: 0.3s;
   }
   .burger-container span:first-child {
     top: 3px;
@@ -67,27 +67,32 @@ label:hover {
 
 input:checked + label span {
   opacity: 0;
+  visibility: hidden;
   top: 50%;
 }
 input:checked + label span:first-child {
   opacity: 1;
+  visibility: visible;
+  display: block;
   transform: rotate(45deg);
   transform-origin: 5% center;
 }
 input:checked + label span:last-child {
   opacity: 1;
+  visibility: visible;
   transform: rotate(-45deg);
   transform-origin: 5% center;
 }
 
 input:not(:checked) ~ ul {
+  visibility: hidden;
   opacity: 0;
 }
 
 ul {
   background: var(--first-color);
   z-index: 3;
-  transition: 0.5s;
+  transition: 0.3s;
   overflow: hidden;
   text-align: center;
   position: absolute;
@@ -97,7 +102,7 @@ ul {
 
 input ~ ul li {
   list-style-type: none;
-  transition: 0.5s;
+  transition: 0.3s;
   transition-delay: 0s;
   text-decoration: none;
   text-transform: uppercase;
@@ -114,5 +119,5 @@ input:checked ~ ul {
 }
 
 input:checked ~ ul li {
-  transition-delay: 0.5s;
+  transition-delay: 0.3s;
 }
